--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>io.github.delirius325</groupId>
-	<artifactId>jmeter.backendlistener.elasticsearch</artifactId>
-	<version>2.7.0</version>
+	<groupId>io.github.dhart-ebsco</groupId>
+	<artifactId>jmeter.backendlistener.cloudwatch</artifactId>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
-	<name>jmeter.backendlistener.elasticsearch</name>
-	<description>JMeter ElasticSearch Backend Listener is a JMeter plugin enabling you to send test results to an ElasticSearch engine. It is meant as an alternative live-monitoring tool to the built-in "InfluxDB" backend listener of JMeter.</description>
-	<url>https://github.com/delirius325/jmeter-elasticsearch-backend-listener</url>
+	<name>jmeter.backendlistener.cloudwatch</name>
+	<description>JMeter CloudWatch Backend Listener is a JMeter plugin enabling you to send test results to an cloudwatch.</description>
+	<url>https://github.com/dhartebsco/jmeter-cloudwatch-backend-listener</url>
 	<repositories>
 		<repository>
 			<id>jitpack.io</id>
@@ -26,28 +26,21 @@
 	</licenses>
 
 	<scm>
-		<url>https://github.com/delirius325/jmeter-elasticsearch-backend-listener.git</url>
+		<url>https://github.com/dhart-ebsco/jmeter-cloudwatch-backend-listener.git</url>
 	</scm>
 
 	<developers>
 		<developer>
-			<id>delirius325</id>
-			<name>Anthony Gauthier</name>
-			<email>antho325@hotmail.com</email>
-			<url>http://www.github.com/delirius325</url>
-			<timezone>America/New_York</timezone>
+			<id>dhart-ebsco</id>
+			<name>David Hart</name>
+			<email>dhart@ebsco.com</email>
+			<url>http://www.github.com/dhart-ebsco</url>
+			<timezone>America/Chicago</timezone>
 		</developer>
 	</developers>
 
 	<contributors>
-		<contributor>
-			<name>Christian Weber</name>
-			<url>http://www.github.com/siggitrain</url>
-			<timezone>MESZ</timezone>
-			<properties>
-				<github>siggitrain</github>
-			</properties>
-		</contributor>
+
 	</contributors>
 
 	<properties>
@@ -62,7 +55,7 @@
 		<junit.platform.version>1.0.0</junit.platform.version>
 		<org.apache.jmeter.version>5.3</org.apache.jmeter.version>
 		<org.apache.commons>3.9</org.apache.commons>
-		<org.elasticsearch.client>6.7.1</org.elasticsearch.client>
+		<org.cloudwatch.client>6.7.1</org.cloudwatch.client>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -105,11 +98,14 @@
 			<version>${org.apache.commons}</version>
 			<scope>provided</scope>
 		</dependency>
+			
 		<dependency>
-			<groupId>org.elasticsearch.client</groupId>
-			<artifactId>elasticsearch-rest-client</artifactId>
-			<version>${org.elasticsearch.client}</version>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
 		</dependency>
+
+		
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
@@ -135,30 +131,33 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>[2.9.9,)</version>
 		</dependency>
-		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk-core</artifactId>
-			<version>1.11.495</version>
-		</dependency>
-		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk-secretsmanager</artifactId>
-			<version>1.11.495</version>
-		</dependency>
-		<dependency>
-			<groupId>vc.inreach.aws</groupId>
-			<artifactId>aws-signing-request-interceptor</artifactId>
-			<version>0.0.22</version>
-		</dependency>
-		<dependency>
-			<groupId>com.github.awslabs</groupId>
-			<artifactId>aws-request-signing-apache-interceptor</artifactId>
-			<version>b3772780da</version>
-		</dependency>
+		       <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>cloudwatch</artifactId>
+            <version>2.10.86</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>cloudwatchevents</artifactId>
+            <version>2.10.86</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>cloudwatchlogs</artifactId>
+            <version>2.10.86</version>
+        </dependency>
+  
+
 	</dependencies>
 	<distributionManagement>
 		<snapshotRepository>
